fixed line on top of login on iphone5

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -370,7 +370,7 @@ input {
   top: 0;
   right: 0;
   width: 100%;
-  height: 10%;
+  height: 12%;
   background: white;
 }
 
